[tool.poetry]
name = "comfyui-controlnet-aux"
version = "0.1.0"
description = ""
authors = ["Joachim Holwech <joachim@holwech.com>"]
readme = "README.md"
packages = [{include = "comfyui_controlnet_aux"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
