[tool.poetry]
name = "comfyui-controlnet-aux"
version = "0.1.0"
description = ""
authors = ["Joachim Holwech <joachim@holwech.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0"
importlib-metadata = "^7.0.1"
huggingface-hub = "^0.20.3"
scipy = "^1.12.0"
opencv-python = ">=4.7.0.72"
filelock = "^3.13.1"
numpy = "^1.26.3"
pillow = "^10.2.0"
einops = "^0.7.0"
torchvision = "^0.16.2"
pyyaml = "^6.0.1"
scikit-image = "^0.22.0"
python-dateutil = "^2.8.2"
fvcore = "^0.1.5.post20221221"
yapf = "^0.40.2"
omegaconf = "^2.3.0"
ftfy = "^6.1.3"
addict = "^2.4.0"
yacs = "^0.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
